@@ -213,6 +213,8 @@ Release 2.14.1 Start 21/09/2021 End xx/xx/2022
 - 23/04/2022
 118. qscheduler.c: do not restart qmail-send when terminated due to empty queue
 119. qmail-send.c, slowq-send.c, qmail-todo.c: display pid in logs on exit
+- 24/04/2022
+120. qscheduler.c: added function to update queue counts in shared memory
 
 * 
 Release 2.14.0 Start 18/07/2021 End 12/09/2021
